# fsoft2025_1DA_2

./: .gitattributes  .gitignore  README.md
Project/: main.cpp
Project/FleetManager/: CMakeLists.txt  main.cpp
Project/FleetManager/data/: driver.json  financial.json  order.json  trip.json  vehicle.json  vsl.json
Project/FleetManager/headers/controllers/: Controller.h
Project/FleetManager/headers/exceptions/: DuplicatedDataException.h  InvalidDataException.h  NonExistingDataException.h
Project/FleetManager/headers/model/: Date.h  Driver.h  DriverContainer.h  Enterprise.h  Expense.h  FinancialContainer.h  Inspection.h  Insurance.h  Order.h  OrderContainer.h  Revenue.h  Trip.h  TripContainer.h  Truck.h  VSLContainer.h  Vacation.h  Van.h  Vehicle.h  VehicleContainer.h  VehicleStorageLocation.h  date.h  driver.h
Project/FleetManager/headers/serial/: DataContainer.cpp  DataContainer.h  DriverSerialization.h  FinancialSerialization.h  OrderSerialization.h  TripSerialization.h  VehicleSerialization.h  VehicleStorageLocationSerialization.h
Project/FleetManager/headers/views/: DriverView.h  FinancialView.h  InspectionView.h  InsuranceView.cpp  InsuranceView.h  OrderView.h  Orderview.h  TripView.h  Utils.h  VacationView.h  VehicleStorageLocationView.h  VehicleView.h  View.h
Project/FleetManager/sources/controllers/: Controller.cpp
Project/FleetManager/sources/exceptions/: DuplicatedDataException.cpp  InvalidDataException.cpp  NonExistingDataException.cpp
Project/FleetManager/sources/model/: Date.cpp  Driver.cpp  DriverContainer.cpp  Enterprise.cpp  Expense.cpp  FinancialContainer.cpp  Inspection.cpp  Insurance.cpp  Order.cpp  OrderContainer.cpp  Revenue.cpp  Trip.cpp  TripContainer.cpp  Truck.cpp  VSLContainer.cpp  Vacation.cpp  Van.cpp  Vehicle.cpp  VehicleContainer.cpp  VehicleStorageLocation.cpp
Project/FleetManager/sources/serial/: DataContainer.cpp  DriverSerialization.cpp  FinancialSerialization.cpp  OrderSerialization.cpp  TripSerialization.cpp  VehicleSerialization.cpp  VehicleStorageLocationSerialization.cpp
Project/FleetManager/sources/views/: DriverView.cpp  FinancialView.cpp  InspectionView.cpp  InsuranceView.cpp  OrderView.cpp  TripView.cpp  Utils.cpp  VacationView.cpp  VehicleStorageLocationView.cpp  VehicleView.cpp  View.cpp
ProjectTester/: date_test.cpp  driver_test.cpp  main.cpp  trip_test.cpp
ProjectTester/FleetManagerTest/: CMakeLists.txt  data_test.cpp  date_test.cpp  driverContainer_test.cpp  driver_test.cpp  financialContainer_test.cpp  financial_test.cpp  main.cpp  orderContainer_test.cpp  order_test.cpp  tripContainer_test.cpp  trip_test.cpp  truck_test.cpp  van_test.cpp  vehicleContainer_test.cpp  vehicle_test.cpp  vslContainer_test.cpp  vsl_test.cpp
ProjectTester/FleetManagerTest/dummy-json-data/: driver.json  financial.json  order.json  trip.json  vehicle.json  vsl.json
